# TFG_NRPCQA

./: .gitignore  README.md  requirements.txt
Distort/: Distortions.py  GetMetrics.py  gen_distortions.py  get_metrics.py
Distort/Softwares/: pc_error  pcqm
Distort/octree/: CMakeLists.txt  point_cloud_compression.cpp
Distort/utils/: PCDistortions.py  distortions.py  metrics.py  pcmetrics_module.py
Document/: proyecto.tex
Document/apendices/: apendices.tex
Document/bibliografia/: bibliografia.bib
Document/capitulos/: 01_Introduccion.tex  02_Fundamentos_Teoricos.tex  03_Estado_del_arte.tex  04_Materiales_y_Distorsiones.tex  05_Implementacion_y_Experimentos.tex  06_Conclusiones.tex
Document/config/: config.tex
Document/portada/: portada.tex  portada_2.tex
Document/prefacios/: prefacio.tex
NR3DQA/experiment for SJTU-PCQA/: performance.py
NR3DQA/experiment for WPC/: performance.py
NR3DQA/feature_extract_pc/: choosen_features.py  demo.py  feature_extract.py  generate_hist.py  new_features.csv  other_features.py  pca_analysis.py
NR3DQA/nr3dqa/: nr3dqa.py
NR3DQA/testdf/: test_df.py
Presentation/: presentacion.tex  structure.sty
Presentation/bibliografia/: bibliografia.bib
Presentation/capitulos/: capitulo1.tex  capitulo2.tex  capitulo3.tex  capitulo4.tex  capitulo5.tex
Utils/: STDRemove.py  ScreenCamera_2023-07-01-16-42-58.json  SelectPCPoints.py  normalize.py  pre_process_pc.py  readPC.py  read_dicom.py  read_pc.py  rescale.py  scale_ls_pcqa.py  split_ls_pcqa.py
VQA_PC/: VQA_PC_FASTAI.ipynb
test/: test.py
train/: train.py
(+20 files in other folders)
